libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_commit_files_loading.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 660
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  commit abc1234                                                 │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│     M lib.rs                   │                                                                 │
│     M main.rs                  │      selected commit                                            │
│                                │                                                                 │
│                                │  diff --git a/commit.txt b/commit.txt                           │
│                                │  @@ -1 +1 @@                                                    │
│                                │  -old abc1234                                                   │
│                                │  +new abc1234                                                   │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│ main                          │                                                                 │
│  feature/mvp                   │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
╭ 3   Commit Files ─────────────╮─────────────────────────────────────────────────────────────────╯
│                                │ 6  󰌱 Log                                                        │
│                                │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
/ loading: commit files   enter  expand   v  visual   Esc  back   ?  commands
