libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_commit_files_subpanel.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 609
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  diff --git a/README.md b/README.md                             │
│    src/                       │  @@ -1 +1 @@                                                    │
│     M lib.rs                   │  -old README.md                                                 │
│     M main.rs                  │  +new README.md                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│ main                          │                                                                 │
│  feature/mvp                   │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
╭ 3   Commit Files ─────────────╮─────────────────────────────────────────────────────────────────╯
│   M README.md                  │ 6  󰌱 Log                                                        │
│    src/                       │  notice=Ready                                                   │
│     A lib.rs                   │                                                                 │
│     R new_name.rs              │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 enter  expand   v  visual   Esc  back   ?  commands
