libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_conflict_repo_120x40.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 120, height: 40, },)"
---
┌ [1] 󰈙 Files ──────────────────────────┐┌ [5]  Details ──────────────────────────────────────────────────────────────┐
│    Cargo.toml (both modified)        ││  ### unstaged                                                               │
│    src/                              ││  diff --git a/Cargo.toml (both modified) b/Cargo.toml (both modified)       │
│      conflict.rs (both modified)     ││  @@ -1 +1 @@                                                                │
│                                       ││  -old Cargo.toml (both modified)                                            │
│                                       ││  +new Cargo.toml (both modified)                                            │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
└───────────────────────────────────────┘│                                                                             │
┌ [2]  Branches ───────────────────────┐│                                                                             │
│ main                                 ││                                                                             │
│  feature/mvp                          ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
└───────────────────────────────────────┘│                                                                             │
┌ [3]  Commits ────────────────────────┐└─────────────────────────────────────────────────────────────────────────────┘
│ abc1234 init project                 │┌ [6] 󰌱 Log ──────────────────────────────────────────────────────────────────┐
│ def5678 wire commands                ││  notice=Ready                                                               │
│  draft=                               ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
└───────────────────────────────────────┘│                                                                             │
┌ [4]  Stash ──────────────────────────┐│                                                                             │
│ stash@{0} WIP on main: local test    ││                                                                             │
└───────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────┘
keys(files): space stage/unstage | c commit | s stash(all|selected) | v multi | enter expand | / search
