libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_empty_repo_80x24.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 80, height: 24, },)"
---
╭ 1  󰈙 Files ─────────────╮ 5   Details ──────────────────────────────────────╮
│                         │  details(files): no diff for current selection     │
│                         │                                                    │
│                         │                                                    │
│                         │                                                    │
│                         │                                                    │
│                         │                                                    │
│                         │                                                    │
╰─────────────────────────╯                                                    │
│ 2   Branches           │                                                    │
│ main                   │                                                    │
│                         │                                                    │
│                         │                                                    │
│                         │                                                    │
╰─────────────────────────╯                                                    │
│ 3   Commits            │────────────────────────────────────────────────────╯
│                         │ 6  󰌱 Log                                           │
│                         │  notice=Ready                                      │
│                         │                                                    │
╰─────────────────────────╯                                                    │
│ 4   Stash              │                                                    │
│                         │                                                    │
╰─────────────────────────╯────────────────────────────────────────────────────╯
 space  stage/unstage   d  discard   c  commit   s  stash   D  reset   enter  ex
