libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_commit_editor_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│     M lib.rs                   │  @@ -1 +1 @@                                                    │
│     M main.rs     ╭ ✎ Commit Message ────────────────────────────────────────╮                   │
│                   │ Edit commit subject and optional body                    │                   │
│                   │ ╭ Subject ─────────────────────────────────────────────╮ │                   │
│                   │ │feat: add modal                                       │ │                   │
│                   │ ╰──────────────────────────────────────────────────────╯ │                   │
│                   │ ╭ Body ────────────────────────────────────────────────╮ │                   │
╰───────────────────│ │body line 1                                           │ │                   │
│ 2   Branches     │ │body line 2                                           │ │                   │
│ main             │ │                                                      │ │                   │
│  feature/mvp      │ │                                                      │ │                   │
│                   │ ╰──────────────────────────────────────────────────────╯ │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Tab/Shift+Tab field  Left/Right/Home/End cursor          │                   │
│                   │ Ctrl+J newline  Enter confirm  Esc cancel                │                   │
╰───────────────────╰──────────────────────────────────────────────────────────╯                   │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Tab  field   arrows/Home/End  cursor   Ctrl+J  newline   Enter  confirm   Esc  cancel
