libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_details_scrolled_down.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, size)"
---
╭ 1  󰈙 Files ─────────────╮ 5   Details ──────────────────────────────────────╮
│   ? README.md           │  diff --git a/src/lib.rs b/src/lib.rs              │
│    src/                │  @@ -1 +1 @@                                       │
╰─────────────────────────╯  -old src/lib.rs                                   │
│ 2   Branches           │  +new src/lib.rs                                   │
│ main                   │  diff --git a/src/main.rs b/src/main.rs            │
╰─────────────────────────╯  @@ -1 +1 @@                                       │
│ 3   Commits            │  -old src/main.rs                                  │
│●  abc1234  RT  init proj│────────────────────────────────────────────────────╯
╰─────────────────────────╯ 6  󰌱 Log                                           │
│ 4   Stash              │  notice=Ready                                      │
│ stash@{0} WIP on main: │                                                    │
╰─────────────────────────╯────────────────────────────────────────────────────╯
 space  stage/unstage   d  discard   c  commit   s  stash   D  reset   enter  ex
