libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_discard_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 232
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
┌ [1] 󰈙 Files ───────────────────┐┌ [5]  Details ─────────────────────────────────────────────────┐
│    README.md                  ││  ### unstaged                                                  │
│    src/                       ││  diff --git a/README.md b/README.md                            │
│      lib.rs                   ││  @@ -1 +1 @@                                                   │
│      main.rs                  ││  -old README.md                                                │
│                                ││  +new README.md                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│             ┌ Discard Changes ─────────────────────────────────────────────────────┐             │
└─────────────│ Discard selected file changes?                                       │             │
┌ [2]  Branch│ Targets: 1 file                                                      │             │
│ main       │ - README.md                                                          │             │
│  feature/mvp│                                                                      │             │
│             │                                                                      │             │
│             │                                                                      │             │
│             │                                                                      │             │
│             │ This removes tracked changes and deletes untracked targets.          │             │
└─────────────│ Enter discard  |  Esc cancel                                         │             │
┌ [3]  Commit└──────────────────────────────────────────────────────────────────────┘─────────────┘
│ abc1234 init project          │┌ [6] 󰌱 Log ─────────────────────────────────────────────────────┐
│ def5678 wire commands         ││  notice=Ready                                                  │
│  draft=                        ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘│                                                                │
┌ [4]  Stash ───────────────────┐│                                                                │
│ stash@{0} WIP on main: local t││                                                                │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
discard: Enter confirm | Esc cancel
