libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_files_discard_confirm_modal_fullscreen.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 160, height: 50, },)"
---
╭ 1  󰈙 Files ────────────────────────────────────────╮ 5   Details ───────────────────────────────────────────────────────────────────────────────────────────╮
│   ? README.md                                      │  ### unstaged                                                                                           │
│    src/                                           │  diff --git a/README.md b/README.md                                                                     │
│     M lib.rs                                       │  @@ -1 +1 @@                                                                                            │
│     M main.rs                                      │  -old README.md                                                                                         │
│                                                    │  +new README.md                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                       ╭ ‼ Confirm ───────────────────────────────────────────────────────────────────────────────────────────────────╮                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
╰───────────────────────│                                                                                                              │                       │
│ 2   Branches         │                                                                                                              │                       │
│ main                 │                                        Discard selected file changes?                                        │                       │
│  feature/mvp          │                                         This action cannot be undone.                                        │                       │
│                       │                                                                                                              │                       │
│                       │                                                Targets: 1 file                                               │                       │
│                       │                                                  - README.md                                                 │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
│                       │                                                                                                              │                       │
╰───────────────────────│                                                                                                              │                       │
│ 3   Commits          │                                                                                                              │───────────────────────╯
│●  abc1234  RT  init pr│                                                                                                              │                       │
│●  def5678  RT  wire co│                                                                                                              │                       │
│                       │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────── │                       │
│                       │ Enter discard  Esc cancel                                                                                    │                       │
│                       ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                       │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
│                                                    │                                                                                                         │
╰────────────────────────────────────────────────────╯                                                                                                         │
│ 4   Stash                                         │                                                                                                         │
│ stash@{0} WIP on main: local test                 │                                                                                                         │
╰────────────────────────────────────────────────────╯─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
